Remove unexpected / char
Remove unexpected / char

--- a/views/train.html
+++ b/views/train.html
@@ -40,7 +40,7 @@
   </div>
 
   <script>
-    const host = "https://kolznftgate.up.railway.app/";
+    const host = "https://kolznftgate.up.railway.app";
     const replicaId = localStorage.getItem("replicaId");
     const wallet = localStorage.getItem("wallet");
 
