Change gateway hostname
Change gateway hostname

--- a/views/train.html
+++ b/views/train.html
@@ -83,7 +83,7 @@
 
 
   <script>
-    const host = "http://localhost:8080";
+    const host = "https://kolzacademygate.up.railway.app";
     const replicaId = localStorage.getItem("replicaId");
     const wallet = localStorage.getItem("wallet");
 
