Update Info page
Update Info page

--- a/views/index.html
+++ b/views/index.html
@@ -115,7 +115,7 @@
     <nav class="menu">
       <a href="#replicas">Agents</a>
       <a href="create">Create</a>
-      <a href="#info">Info</a>
+      <a href="info">Info</a>
       <button class="connect" onclick="connectWallet()">🔗 Connect Wallet</button>
     </nav>
   </header>
