Rebranding and change to testnet
Rebranding and change to testnet

--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Kolz Academy Demo</title>
+  <title>Meta Pillar AI</title>
   <script src="/ethers.umd.min.js"></script>
   <script src="/contractabi.js"></script>
   <script src="/nft.js"></script>
@@ -111,7 +111,7 @@
 <body>
 
   <header>
-    <div class="logo">KOLZ Academy</div>
+    <div class="logo">Meta Pillar AI</div>
     <nav class="menu">
       <a href="#replicas">Agents</a>
       <a href="create">Create</a>
