Update host path online
Update host path online

--- a/views/chat.html
+++ b/views/chat.html
@@ -45,7 +45,7 @@
   <script>
     const wallet = localStorage.getItem("wallet");
     const replicaId = localStorage.getItem("replicaId");
-    const host = "https://kolzacademygate.up.railway.app";
+    const host = "https://melagate.up.railway.app";
 
     async function loadReplicaInfo() {
       const res = await fetch(`${host}/api/v1/replicas`);
