--- a/views/train.html
+++ b/views/train.html
@@ -83,7 +83,7 @@
 
 
   <script>
-    const host = "https://kolzacademygate.up.railway.app";
+    const host = "https://melagate.up.railway.app/";
     const replicaId = localStorage.getItem("replicaId");
     const wallet = localStorage.getItem("wallet");
 
