--- a/views/contributionManage.html
+++ b/views/contributionManage.html
@@ -106,13 +106,13 @@
       <div class="contribution-content">
         <h3>Contribution Content</h3>
         <div id="fullContent">Select a contribution to view its content.</div>
+        <button id="verifyButton" style="margin-top: 20px;">Verify</button>
+        <div id="verifyResult" style="margin-top: 10px; font-weight: bold;"></div>
       </div>
     </div>
     
     <div id="status"></div>
   </div>
-
-  
   <script src="/contributionManage.js"></script>
 </body>
 </html>
